# telegram-spotify-bot

./: .gitignore  CRIAR_REPOSITORIO_GITHUB.md  GUIA_APIS.md  GUIA_RAPIDO_DEPLOY.md  PUSH_PARA_GITHUB.md  README.md  RENDER_DEPLOYMENT.md  bot.db  botfather_commands.txt  check_render_config.py  commit-to-github.js  init_database.py  main.py  package-lock.json  package.json  push-to-github-simple.js  pyproject.toml  render.yaml  replit.md  requirements.txt  run_oauth.py  start.py  webhook_server.py
attached_assets/: Pasted-necessito-o-desenvolvimento-de-um-bot-de-telegram-que-deve-focar-em-efici-ncia-seguran-a-escalabi-1759179829924_1759179829925.txt
src/: __init__.py  bot.py  config.py  oauth_server.py
src/database/: db.py  models.py
src/modules/: __init__.py  ai.py  automod.py  configuration.py  info.py  moderation.py  rank.py  spotify_music.py
src/utils/: permissions.py  responses.py
