[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "cryptography>=46.0.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[all]>=22.5",
    "quart>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.43",
]
